<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buscar_comensal_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="30dp"
    android:focusable="true"
    android:background="@color/fondo_claro_oscuro"
    tools:context="com.carlasarai.TicketsKotlin.ui.canjearComensalPorNombreArea.CanjearComensalPorNombreArea">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/primer_linear"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_persona"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/text_nombre"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/barra_blanca"
            android:layout_gravity="center"
            android:text=""
            android:textSize="18sp"
            android:hint="@string/nombre_del_comensal"
            android:textColor="@color/bienvenido_color"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/segundo_linear"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/primer_linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_area_comedor"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/barra_blanca"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/autoCompliteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/area_del_comensal"
                android:textSize="18sp"
                android:inputType="none"
                android:imeOptions="actionDone"
                android:layout_weight="1"
                android:maxLines="1"
                android:singleLine="true"
                android:dropDownHeight="250dp"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botton_nombre_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_buttons"
        android:gravity="center"
        android:text="@string/buscar_comensal"
        android:textColor="@color/fondo_claro_oscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/segundo_linear" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/cuarto_linea"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botton_nombre_area">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvComensales"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/item_barra_blanca"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botton_ir_al_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_buttons"
        android:gravity="center"
        android:text="@string/ir_al_ticket"
        android:textColor="@color/fondo_claro_oscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cuarto_linea" />

</androidx.constraintlayout.widget.ConstraintLayout>